--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -67,3 +67,32 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+
+.main-container{
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.modal{
+  padding: 16px;
+  display: flex;
+  gap: 16px;
+}
+
+.main-container-vert-bot{
+  display: flex;
+  flex-direction: row;
+}
+
+.main-container-vert-top{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 10px;
+}
+
+.header{
+  font-size: 18px;
+}
