--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -16,6 +16,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 8px 16px;
 }
 
 input {
@@ -24,4 +25,58 @@ input {
   padding: 8px 24px;
   width: 400px;
   margin-bottom: 16px;
+}
+
+
+a{
+  text-decoration: none;
+  color: rgb(32, 32, 32);
+}
+
+
+li{
+  text-decoration: none;
+  list-style-type: none;
+}
+
+ul {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  gap: 16px
+}
+
+body{
+  display: flex;
+  flex-direction: column;
+}
+
+.content{
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  
+}
+
+.header, .footer{
+  display: flex;
+  justify-content:space-between ;
+  padding: 16px;
+}
+
+.left-links, .right-links{
+  display: flex;
+  flex-direction: row;
+  gap: 16px;
+}
+
+
+
+
+
+.footer{
+  background-color: #eeeeee;
 }
